src/objects/Apttus_Config2__PriceListItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the price item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the price item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>PriceListItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price item is taxable</description>
        <inlineHelpText>Indicates whether the price item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The price list item type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UBARAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the unbilled A/R account rule</description>
        <inlineHelpText>ID of the unbilled A/R account rule</inlineHelpText>
        <label>Unbilled A/R Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Unbilled A/R Account</value>
            </filterItems>
            <infoMessage>Please select an Unbilled A/R Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Price List Items (Unbilled A/R Account)</relationshipLabel>
        <relationshipName>PriceListItemsUBAR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UBAccountRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the unbilled deferred account rule</description>
        <inlineHelpText>ID of the unbilled deferred account rule</inlineHelpText>
        <label>Unbilled Deferred Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
                <operation>equals</operation>
                <value>Unbilled Deferred Account</value>
            </filterItems>
            <infoMessage>Please select an Unbilled Deferred Account Rule</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Price List Items (Unbilled Deferred Account)</relationshipLabel>
        <relationshipName>PriceListItemsUB</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price List Item</label>
    <nameField>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>